# kohaku_ros_examples

kohaku_moveit_examples/: CMakeLists.txt  README.md  package.xml  setup.py
kohaku_moveit_examples/scripts/: concurrent_motion_example_node  gripper_example_node  motion_example_node  show_eefpose_node
kohaku_moveit_examples/src/kohaku_moveit_examples/: concurrent_motion_example_node.py  gripper_example_node.py  motion_example_node.py  show_eefpose_node.py
kohaku_service_examples/: CMakeLists.txt  README.md  package.xml  setup.py
kohaku_service_examples/launch/: amber_impedance_control_demo.launch
kohaku_service_examples/scripts/: enable_zerog_node  master_slave_node  mode_change_pos2cur_node  pick_and_place_with_grasp_node  reset_alarm_node  servo_alloff_node  servo_allon_node  set_joint_trajectory_node
kohaku_service_examples/src/kohaku_service_examples/: kohaku_enable_zerog_node.py  kohaku_master_slave_node.py  kohaku_mode_change_pos2cur_node.py  kohaku_pick_and_place_with_grasp_node.py  kohaku_reset_alarm_node.py  kohaku_servo_alloff_node.py  kohaku_servo_allon_node.py  kohaku_set_joint_trajectory_node.py
