<?xml version="1.0"?>
<package format="2">
  <name>kohaku_moveit_examples</name>
  <version>0.0.0</version>
  <description>The kohaku_moveit_examples package</description>

  <maintainer email="yoshikai@qibitech.com">T.Yoshikai</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sensor_msgs</depend>

</package>
