<?xml version="1.0"?>
<package format="2">
  <name>kohaku_service_examples</name>
  <version>0.0.0</version>
  <description>The kohaku_service_examples package</description>
  <maintainer email="yoshikai@qibitech.com">T.Yoshikai</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
  </export>
</package>
